@startuml Entities
entity FABranch {
    int id;
    Location responsible_location;
    String address;
    String email;
    String phone;
    String website;
    String fax;
}

entity Facility {
    int id;
    String name;
    String owner;
    FacilityType type;
    Location location;
    String address;
    String phone;
}

entity Certificate {
    int id;
    Facility facility;
    boolean revoked;
    Date issued_date;
    String issue_id;
    Date expires;
    String issued_by;
}

entity Location {
    int id;
    int code;
    String name;
    String type;
}

entity CheckingPlan {
    int id;
    Date created_at;
    Date checked_at;
    Facility facility;
}

entity CheckingActivity {
    int id;
    CheckingPlan plan;
    Date checked_at;
    Date end_at;
    User inspector;
    Purpose inspectionActivity;
    boolean passed;
}

entity FoodSample {
    int id;
    int name;
    CheckingActivity activity;
    Date picked_at;
    Date receive_at;
    double amount;
    Facility facility;
    String examiner;
    InspectionUnit inspector;
    boolean passed;
}

entity FoodSampleCriteria {
    int id;
    FoodSample sample;
    String name;
    double result;
    double limit;
    boolean passed;
}

entity Violation {
    int id;
    String description;
}

entity InspectionUnit {
    int id;
    String address;
    String email;
    String phone;
    String website;
    String fax;
}

entity Role {
    int id;
    String name;
    int level;
    String description;
}

entity User {
    int id;
    String username;
    String password;
    String secret;
    String display_name;
    String email;
    String phone;
    int role_id;
}

entity ResponsibleArea {
    int id;
    User user;
    Location responsible_location;
}

entity Purpose {
    int id;
    String name;
}

entity FacilityType {
    int id;
    String name;
}

Facility ||--|| Certificate
FoodSampleCriteria }|--|| FoodSample
FABranch }|--|| Location
ResponsibleArea }|--|| Location
CheckingPlan }|--|| Facility
CheckingActivity }|--|| CheckingPlan
User }|--|| Role
ResponsibleArea }|--|| User
CheckingActivity }|--|| Violation
FoodSample }|--|| CheckingActivity
InspectionUnit ||--|| FoodSample
CheckingActivity }|--|| User
CheckingActivity ||--|| Purpose
FacilityType ||--|| Facility

@enduml